[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/World/ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/World/InfiniteGround.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/font/ARDESTINE.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/Screens/Menu.gd" type="Script" id=5]
[ext_resource path="res://assets/themes/menu_button.tres" type="Theme" id=6]
[ext_resource path="res://assets/font/MainMenu.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/texture/UI/GAME GUI squares/right.png" type="Texture" id=8]
[ext_resource path="res://assets/texture/UI/GAME GUI squares/quitX.png" type="Texture" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]
[ext_resource path="res://assets/Sounds/14_MENU_MUSIC_DUST_OF_THE_SATURN.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/texture/Baza.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="MainMenu" type="Node2D"]
pause_mode = 2

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
editor/display_folded = true
position = Vector2( -1361.36, 813.469 )
MID_SPEED = 800.0
ACCELERATION = 1.5
is_interactive = false

[node name="Camera2D" parent="Player" index="0"]
smoothing_enabled = true
smoothing_speed = 3.0

[node name="InfiniteGround" parent="." instance=ExtResource( 3 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
margin_top = 100.0
margin_right = 1920.0
margin_bottom = 20.0
alignment = 1

[node name="Label" type="Label" parent="UI/HBoxContainer"]
margin_left = 385.0
margin_right = 1535.0
margin_bottom = 453.0
custom_fonts/font = SubResource( 1 )
text = "Moon Patrol
"

[node name="Menu" type="CenterContainer" parent="UI"]
margin_left = 791.0
margin_top = 419.0
margin_right = 1129.0
margin_bottom = 661.0
script = ExtResource( 5 )

[node name="Buttons" type="VBoxContainer" parent="UI/Menu"]
margin_right = 338.0
margin_bottom = 242.0
alignment = 1

[node name="PlayBtn" type="Button" parent="UI/Menu/Buttons"]
margin_right = 338.0
margin_bottom = 119.0
theme = ExtResource( 6 )
custom_styles/focus = SubResource( 2 )
custom_fonts/font = ExtResource( 7 )
text = " Play"
icon = ExtResource( 8 )
flat = true
align = 2

[node name="ExitBtn" type="Button" parent="UI/Menu/Buttons"]
margin_top = 123.0
margin_right = 338.0
margin_bottom = 242.0
grow_vertical = 2
theme = ExtResource( 6 )
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 7 )
text = " Quit"
icon = ExtResource( 9 )
flat = true
align = 2

[node name="Tween" type="Tween" parent="UI/Menu"]

[node name="GameStartDelay" type="Timer" parent="UI/Menu"]
wait_time = 3.0
one_shot = true

[node name="FadeOut" type="Sprite" parent="UI/Menu"]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 132.284, 198.067 )
scale = Vector2( 17.8333, 11.2467 )
texture = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="base" type="Sprite" parent="."]
position = Vector2( -1072.44, 772.812 )
texture = ExtResource( 12 )
[connection signal="pressed" from="UI/Menu/Buttons/PlayBtn" to="UI/Menu" method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="UI/Menu/Buttons/ExitBtn" to="UI/Menu" method="_on_ExitBtn_pressed"]
[connection signal="timeout" from="UI/Menu/GameStartDelay" to="UI/Menu" method="_on_GameStartDelay_timeout"]

[editable path="Player"]
